# quercle-pydantic-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/quercle_pydantic_ai/: __init__.py  tools.py
tests/: __init__.py  test_tools.py
